fase_III/01-cilium-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium
---
# Cilium Helm values for Primary Cluster (Cluster 1)
# Install with: helm install cilium cilium/cilium --namespace cilium -f cilium-primary.yaml
# apiVersion: helm.cilium.io/v2alpha1
# kind: CiliumHelmChart
# metadata:
#   name: cilium
#   namespace: cilium
# spec:
#   cilium:
#     cluster:
#       name: cluster-1
#       id: 1
#     clustermesh:
#       apiserver:
#         enabled: true
#         service:
#           type: NodePort
#           nodePort: 32379
#     image:
#       repository: cilium/cilium
#       tag: v1.14.0
#     ipam:
#       mode: kubernetes
#     kubeProxyReplacement: partial
#     operator:
#       replicas: 1
#     hubble:
#       enabled: true
#       ui:
#         enabled: true
